--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "blog.ifvictr.com",
-    "version": "2.0.0",
+    "version": "2.18.1",
     "description": "Source code of my Ghost-on-Heroku blog.",
     "scripts": {
         "start": "node server.js"
@@ -14,8 +14,8 @@
         "node": "^10.13.0"
     },
     "dependencies": {
-        "casper": "github:TryGhost/Casper#2.5.0",
-        "ghost": "2.0.0",
+        "casper": "github:TryGhost/Casper#2.9.5",
+        "ghost": "^2.18.1",
         "mysql": "^2.16.0"
     }
 }
