--- a/app.json
+++ b/app.json
@@ -1,20 +1,20 @@
 {
-    "name": "blog.ifvictr.com",
-    "description": "Source code of my Ghost-on-Heroku blog.",
-    "logo": "https://cdn.ifvictr.com/images/ifvictr.com/avatar/1.png",
-    "repository": "https://github.com/ifvictr/blog.ifvictr.com",
-    "scripts": {
-        "postdeploy": "bin/init-deployment"
-    },
-    "success_url": "/ghost",
-    "addons": [
-        "jawsdb",
-        "mailgun"
-    ],
-    "env": {
-        "PUBLIC_URL": {
-            "description": "The HTTPS URL of this app: either your custom domain or default 'herokuapp.com' hostname.",
-            "value": "https://YOURAPPNAME.herokuapp.com"
-        }
+  "name": "blog.ifvictr.com",
+  "description": "A modified setup of Ghost for deployment on Heroku.",
+  "logo": "https://cdn.ifvictr.com/images/ifvictr.com/avatar/1.png",
+  "repository": "https://github.com/ifvictr/blog.ifvictr.com",
+  "scripts": {
+    "postdeploy": "bin/init-deployment"
+  },
+  "success_url": "/ghost",
+  "addons": [
+    "jawsdb",
+    "mailgun"
+  ],
+  "env": {
+    "PUBLIC_URL": {
+      "description": "The HTTPS URL of this app: either your custom domain or default 'herokuapp.com' hostname.",
+      "value": "https://YOURAPPNAME.herokuapp.com"
     }
+  }
 }
