--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cms.ifvictr.com",
-  "version": "2.23.0",
+  "version": "2.30.2",
   "repository": "https://github.com/ifvictr/cms.ifvictr.com",
   "license": "MIT",
   "author": "Victor Truong <me@ifvictr.com>",
@@ -8,9 +8,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "casper": "github:TryGhost/Casper#2.10.1",
-    "ghost": "^2.23.0",
-    "mysql": "^2.16.0"
+    "casper": "github:TryGhost/Casper#2.11.1",
+    "ghost": "2.30.2",
+    "mysql": "2.17.1"
   },
   "engines": {
     "node": "^10.13.0"
