--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "cms.ifvictr.com",
-  "description": "A modified setup of Ghost for deployment on Heroku.",
-  "logo": "https://cdn.ifvictr.com/images/ifvictr.com/avatar/1.png",
+  "description": "A setup of Ghost for deployment on Heroku",
+  "logo": "https://cdn.ifvictr.com/images/ifvictr.com/avatar/2.png",
   "repository": "https://github.com/ifvictr/cms.ifvictr.com",
   "scripts": {
     "postdeploy": "bin/init-deployment"
@@ -13,16 +13,16 @@
   ],
   "buildpacks": [
     {
-      "url": "heroku-community/nginx"
+      "url": "heroku/nodejs"
     },
     {
-      "url": "heroku/nodejs"
+      "url": "heroku-community/nginx"
     }
   ],
   "env": {
     "PUBLIC_URL": {
       "description": "The HTTPS URL of this app: either your custom domain or default 'herokuapp.com' hostname.",
-      "value": "https://YOURAPPNAME.herokuapp.com"
+      "value": "https://<your app name>.herokuapp.com"
     }
   }
 }
