--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "cms.ifvictr.com",
   "description": "A setup of Ghost for deployment on Heroku",
-  "logo": "https://cdn.ifvictr.com/images/ifvictr.com/avatar/2.png",
+  "logo": "https://ghost.org/icons/icon-256x256.png",
   "repository": "https://github.com/ifvictr/cms.ifvictr.com",
   "scripts": {
     "postdeploy": "bin/init-deployment"
