Update app.json with environment variables

--- a/app.json
+++ b/app.json
@@ -21,8 +21,33 @@
   ],
   "env": {
     "PUBLIC_URL": {
-      "description": "The HTTPS URL of this app: either your custom domain or default 'herokuapp.com' hostname.",
+      "description": "The HTTPS URL of this app: either your custom domain or default `herokuapp.com` hostname.",
       "value": "https://YOURAPPNAME.herokuapp.com"
+    },
+    "GHOST_GITHUB_OWNER": {
+      "description": "Username of the user/organization the repository is under."
+    },
+    "GHOST_GITHUB_REPO": {
+      "description": "Name of the repository."
+    },
+    "GHOST_GITHUB_TOKEN": {
+      "description": "An access token from the account commits will be authored by."
+    },
+    "GHOST_GITHUB_BASE_URL": {
+      "description": "Base URL of newly saved images. Uses `raw.githubusercontent.com` by default.",
+      "required": false
+    },
+    "GHOST_GITHUB_BRANCH": {
+      "description": "Branch to push assets to. Defaults to `master`.",
+      "required": false
+    },
+    "GHOST_GITHUB_DESTINATION": {
+      "description": "Directory to push assets to. Defaults to `/`.",
+      "required": false
+    },
+    "GHOST_GITHUB_USE_RELATIVE_URLS": {
+      "description": "Whether or not to return relative URLs instead of absolute URLs. Might be of use to people who generate and serve a static version of their Ghost blog.",
+      "required": false
     }
   }
 }
