Update bugs URL

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": "https://github.com/ifvictr/cms.ifvictr.com#readme",
   "bugs": {
-    "url": "https://github.com/ifvictr/cms.ifvictr.com/issues"
+    "url": "https://github.com/TryGhost/Ghost/issues"
   },
   "repository": {
     "type": "git",
